[package]
name = "path_of_auction"
version = "0.1.0"
authors = ["tuckerthomas <tuckerthomas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
serde = "1.0.100"
serde_json = "1.0.40"
serde_repr = "0.1.5"