[package]
name = "path_of_auction"
version = "0.1.0"
authors = ["tuckerthomas <tuckerthomas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.13.0-alpha.1", features = ["runtime"]}
tokio = { version = "=0.2.0-alpha.4" }
futures-util-preview = { version = "=0.3.0-alpha.18" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.5"