[package]
name = "path_of_auction"
version = "0.1.0"
authors = ["tuckerthomas <tuckerthomas@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.13", features = ["runtime"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "1.4" }
diesel = { version = "1.0.0", features = ["postgres"] }
futures = "0.3.5"
bytes = "0.5.4"
serde_json = "1.0"
serde_repr = "0.1.5"